# topyn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  test.yml  topyn.yml
tests/: test_topyn.py
tests/resources/bad_options/: bad_options.py
tests/resources/bad_rules/: bad_rules.py
tests/resources/incorrect_naming/: incorrect_naming.py
tests/resources/missing_types/: missing_types.py
tests/resources/mutable_default_parameter/: mutable_default_parameter.py
tests/resources/ok/: ok.py
tests/resources/unnecesary_list_call/: unnecesary_list_call.py
tests/resources/unsorted_imports/: unsorted_imports.py
tests/resources/wrong_formatting/: wrong_formatting.py
tests/resources/wrong_types/: wrong_types.py
topyn/: __main__.py  console.py  tui.py
topyn/commands/: __init__.py  format.py  rules.py  sort_imports.py  types.py
topyn/configs/: .isort.cfg  black.toml  flake8.toml  mypy.toml  pyproject.toml  topyn.toml
