[tool.poetry]
name = "topyn"
version = "0.4.0"
description = "TOPyN: Typed Opinionated PYthon Normalizer"
authors = ["Leandro Leites Barrios <laloleites@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lleites/topyn"
repository = "https://github.com/lleites/topyn"
keywords = [
"formatter",
"linter",
"style-guide",
"typing",
"opinionated"
]

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "^3.7"
flake8-bugbear = "^19.8"
flake8-print = "^3.1"
flake8-comprehensions = "^3.1"
black = "19.10b0"
mypy = "^0.740.0"
click = "^7.0"
pep8-naming = "^0.9.1"
autoflake = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.8"

[tool.poetry.scripts]
topyn = 'topyn:console.run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

